@@ -34,9 +34,13 @@
 #include <sys/sysctl.h>
 #elif OS(LINUX) || OS(AIX) || OS(SOLARIS)
 #include <unistd.h>
-#elif OS(WINDOWS)
-#include <windows.h>
+#elif OS(WINDOWS) || OS(QNX)
 #include <wtf/UnusedParam.h>
+#if OS(WINDOWS)
+#include <windows.h>
+#elif OS(QNX)
+#include <sys/syspage.h>
+#endif
 #endif
 
 namespace WTF {
@@ -69,6 +73,10 @@ int numberOfProcessorCores()
     GetSystemInfo(&sysInfo);
 
     s_numberOfCores = sysInfo.dwNumberOfProcessors;
+#elif OS(QNX)
+    UNUSED_PARAM(defaultIfUnavailable);
+
+    s_numberOfCores = _syspage_ptr->num_cpu;
 #else
     s_numberOfCores = defaultIfUnavailable;
 #endif
